--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,115 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css?family=Amaranth|Source+Sans+Pro&display=swap");
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+.main {
+  padding: 2em 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* actual line */
+.main .timeline:before {
+  background: #eeeeee;
+  content: "";
+  height: 100%;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  width: 4px;
+  z-index: 0;
+}
+
+.main .timeline-item {
+  clear: both;
+  list-style-type: none;
+  padding: 0 30px;
+  position: relative;
+  opacity: 1;
+  /* transform: translateY(20px); */
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+
+
+ul.timeline::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 5px; /* Adjust as needed */
+  background-color: blue;
+  height: 0%; /* Initial height */
+  z-index: 1; /* Make sure it doesn't overlap your content */
+  height: var(--scroll-progress, 0%);
+}
+
+
+.main .timeline-item:before {
+  background: #7d1e57;
+  border-radius: 50%;
+  content: "";
+  height: 20px;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  width: 20px;
+  z-index: 100;
+}
+
+.main .timeline-item .timeline-content {
+  background: #7d1e57;
+  /* border: 2px solid #7d1e57; */
+  width: 45%;
+}
+
+.main .timeline-item .timeline-content h3,
+.main .timeline-item .timeline-content p,
+.main .timeline-item .timeline-content button {
+  margin: 20px 0px;
+}
+
+/* my styles */
+
+.main h4 {
+
+  font-size: 1.2em;
+  margin-top: 10px;
+}
+
+.main .timeline-item:nth-child(even) .timeline-content {
+  float: right;
+}
+
+
+@media screen and (max-width: 968px) {
+  .main .timeline {
+    margin: 0 0 0 10px;
+  }
+
+  .main .timeline:before {
+    left: 0px;
+  }
+
+  .main .timeline-item:before {
+    left: 0;
+  }
+
+  .main .timeline-item .timeline-content {
+    margin: 2em 0;
+    width: 100%;
+  }
+
+  .main .timeline-item:nth-child(even) .timeline-content {
+    float: initial;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.full-screen-container {
+  height: 100%;
+  overflow-y: scroll;
 }
